[BUG] Fixed issue where tooltips weren't visible in IE7 [#56421102]
Added an RGB fallback for IE7

--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -68,11 +68,12 @@ $modal-footer-border-color: 	$modal-header-border-color;
 $modal-width: 					70%;
 
 // Tooltip
-$tooltip-max-width:           200px;
-$tooltip-color:               #fff;
-$tooltip-bg:                  rgba(0,0,0,.9);
-$tooltip-arrow-width:         5px;
-$tooltip-arrow-color:         $tooltip-bg;
+$tooltip-max-width:           	200px;
+$tooltip-bg: 					rgba(0,0,0,.9);
+@include ie-lte(7) { $tooltip-bg: rgb(0,0,0); }
+$tooltip-color:               	#fff;
+$tooltip-arrow-width:         	5px;
+$tooltip-arrow-color:         	$tooltip-bg;
 
 // Popovers
 $popover-bg:                          #fff;
